--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
 <div class="nav">
 	<div class="container">
 				<ul class="menu fl">
-			<li><a href="/" title="首页" class="active">首页</a></li>
+			<li><a href="/" title="首页" class="">首页</a></li>
 				
 			<li><a href="/glist/0_5_0_0_0_0.html" title="宝宝要穿">宝宝要穿</a></li>
 				
@@ -59,7 +59,7 @@
 </div>
 <div class="main">
 	<div class="container">
-		<h3 class="nofound">o(︶︿︶)o </h3>
+		<h3 class="nofound">找不到你要的页面o(︶︿︶)o </h3>
 		<script type="text/javascript" src="http://www.qq.com/404/search_children.js?edition=small" charset="utf-8"></script>
 	</div>
 </div>
